<resources>
    <string name="app_name">Italo</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_actividad_diaria">Actividad diaria</string>
    <string name="title_activity_menu__actividad_diaria_main">Actividad diaria</string>
    <string name="evento">Evento</string>
    <string name="ruta_o_extraruta">Ruta ó extraruta</string>
    <string name="cuenta">Cuenta</string>
    <string name="cliente">Cliente</string>
    <string name="venta_proyectada">Venta proyectada</string>
    <string name="venta_real">Venta real</string>
    <string name="cobro_proyectado">Cobro proyectado</string>
    <string name="cobro_real">Cobro real</string>
    <string name="cartera_vencida">Cartera vencida</string>
    <string name="crear_actividad_diaria_del_vendedor">Crear actividad diaria del vendedor</string>
    <string name="consultar_actividad">Consultar actividad</string>
    <string name="eliminar_actividad">Eliminar actividad</string>
    <string name="iniciar_actividad">Iniciar actividad</string>
    <string name="n_plan">Nº Plan</string>
    <string name="fecha">Fecha</string>
    <string name="menu_actividad_diaria">Menú actividad diaria</string>
    <string name="seleccione_la_actvidad_diaria_del_vendedor">Seleccione la actividad diaria del vendedor</string>
    <string name="title_activity_actividad_diaria_crear">Actividad diaria crear</string>
    <string name="action_settings">Settings</string>
    <string name="sector">Sector</string>
    <string name="ruta">Ruta</string>
    <string name="ir_a_extrarutas">Ir a extra rutas</string>
    <string name="programar_cobro">Programar cobro</string>
    <string name="programar_pago">Programar pago</string>
    <string name="indicadores">Indicadores</string>
    <string name="siguiente">Siguiente</string>
    <string name="observaciones_del_vendedor">Observaciones del vendedor en la visita</string>
    <string name="venta_proy">Venta proy</string>
    <string name="cobro_proy">Cobro proy</string>
    <string name="total_dia_en_$">Total día en $</string>
    <string name="total_dia_en_cant">Total día en cant</string>
    <string name="total_dia_en_cantidad">Total día en cantidad</string>
    <string name="n_clientes_en_extra_ruta">Nº Clientes en extra ruta</string>
    <string name="n_clientes">Nº Clientes</string>
    <string name="tejido">Tejido</string>
    <string name="visita">Visita</string>
    <string name="motivo_no_visita">Motivo no visita</string>
    <string name="finalizar_visita">Finalizar visita</string>
    <string name="lun">LUN</string>
    <string name="mar">MAR</string>
    <string name="mie">MIE</string>
    <string name="jue">JUE</string>
    <string name="vie">VIE</string>
    <string name="sab">SAB</string>
    <string name="indicadores_del_dia">Indicadores del día</string>
    <string name="clientes_totales">Clientes totales</string>
    <string name="clientes_en_ruta">Clientes en ruta</string>
    <string name="clientes_en_extraruta">Clientes en extraruta</string>
    <string name="clientes_visitados">Clientes visitados</string>
    <string name="mas_clientes_visitados">+ Clientes visitados</string>
    <string name="clientes_con_gestion">Clientes con gestión</string>
    <string name="clientes_con_no_gestion">Clientes con no gestión</string>
    <string name="clientes_no_visita">Clientes no visita</string>
    <string name="clientes_pendientes">Clientes pendientes</string>
    <string name="efectividad_visitas">Efectividad visitas(%)</string>
    <string name="cumplimiento">Cumplimiento(%)</string>
    <string name="venta_pendiente">Venta pendiente</string>
    <string name="cobro_pendiente">Cobro pendiente</string>
    <string name="actividad_diaria_del_vendedor">Actividad diaria del vendedor</string>
    <string name="clientes">Clientes</string>
    <string name="articulos">Artículos</string>
    <string name="cartera">Cartera</string>
    <string name="historicos_visitas">Históricos visitas</string>
    <string name="consignaciones">Consignaciones</string>
    <string name="asistente">Asistente</string>
    <string name="paretos">Paretos</string>
    <string name="pedidos_negados">Pedidos negados</string>
    <string name="administracion">Administración</string>
    <string name="codigo">Código</string>
    <string name="ti">T.I.</string>
    <string name="total">Total</string>
    <string name="salir">Salir</string>
    <string name="menu">Menu</string>
    <string name="guardar">Guardar</string>
    <string name="transacciones">Transacciones</string>
    <string name="pedidos">Pedidos</string>
    <string name="cobros">Cobros</string>
    <string name="resumen_de_cobros">Resumen de cobros</string>
    <string name="total_registros">Total registros</string>
    <string name="ejecutar">Ejecutar</string>
    <string name="tipo_pago">Tipo pago</string>
    <string name="valor">Valor</string>
    <string name="forma_pago">Forma pago</string>
    <string name="hora_venta">Hora venta</string>
    <string name="resumen_por_medio_de_pago">Resumen por medio de pago</string>
    <string name="total_efectivo">Total efectivo</string>
    <string name="total_cheque">Total cheque</string>
    <string name="total_transferencia">Total transferencia</string>
    <string name="total_consignacion">Total consignación</string>
    <string name="total_cheque_postfechado">Total cheque postfechado</string>
    <string name="total_recaudo">Total recaudo</string>
    <string name="identificacion">Identificación</string>
    <string name="nombre">Nombre</string>
    <string name="buscar_clientes">Buscar clientes</string>
    <string name="todos">Todos</string>
    <string name="buscar">Buscar</string>
    <string name="total_clientes">Total clientes</string>
    <string name="consultas">Consultas</string>
    <string name="horarios">Horarios</string>
    <string name="referencias">Referencias</string>
    <string name="contactos">Contactos</string>
    <string name="sucursales">Sucursales</string>
    <string name="todas">Todas</string>
    <string name="menor_a_30_dias">Menor a 30 días</string>
    <string name="mayor_a_30_dias">Mayor a 30 días</string>
    <string name="mayor_a_60_dias">Mayor a 60 días</string>
    <string name="mayor_a_90_dias">Mayor a 90 días</string>
    <string name="distrito">Distrito</string>
    <string name="subdistrito">Subdistrito</string>
    <string name="tipo_doc">Tipo Doc.</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="codigo_cliente">Código cliente</string>
    <string name="mas_filtros">Más filtros</string>
    <string name="pedido">Pedido</string>
    <string name="motivo">Motivo</string>
    <string name="diario">Diario</string>
    <string name="mensual">Mensual</string>
    <string name="propios">Propios</string>
    <string name="competencia">Competencia</string>
    <string name="ver_detalle">Ver detalle</string>
    <string name="familia">Familia</string>
    <string name="subfamilia">Subfamilia</string>
    <string name="articulo">Artículo</string>
    <string name="presen">Presen.</string>
    <string name="presentacion">Presentación</string>
    <string name="peso">Peso</string>
    <string name="n_prom">Nº Prom</string>
    <string name="tipo_prom">Tipo Prom</string>
    <string name="cant_inicial">Cant. Inicial</string>
    <string name="cant_final">Cant. Final</string>
    <string name="cant_req">Cant. Req</string>
    <string name="cant_bonif">Cant. Bonif</string>
    <string name="art_bonif">Art. bonif</string>
    <string name="porc_descuento">% Descuento</string>
    <string name="fecha_inicial_toma_de_pedido">Fecha inicial toma de pedido</string>
    <string name="fecha_final_toma_de_pedido">Fecha final toma de pedido</string>
    <string name="fecha_incio_facturacion">Fecha incio facturación</string>
    <string name="fecha_final_facturacion">Fecha final facturación</string>
    <string name="promociones">Promociones</string>
    <string name="descripcion">Descripción</string>
    <string name="lista_precio">Lista precio</string>
    <string name="nombre_unidad_de_empaque">Nombre unidad de empaque</string>
    <string name="unidades_de_empaque">Unidades de empaque</string>
    <string name="impuesto_iva">Impuesto IVA</string>
    <string name="sin_iva">Sin IVA</string>
    <string name="con_iva">Con IVA</string>
    <string name="valor_presentacion">Valor presentación</string>
    <string name="valor_unitario">Valor unitario</string>
    <string name="filtro">Filtro</string>
    <string name="pagos_efectuados">Pagos efectuados</string>
    <string name="consig">Consig.</string>
    <string name="medio_de_pago">Medios de Pago</string>
    <string name="documento">Documento</string>
    <string name="valor_pendiente_x_consignar">Valor pendiente por consignar</string>
    <string name="adicionar">Adicionar</string>
    <string name="eliminar">Eliminar</string>
    <string name="consultar">Consultar</string>
    <string name="consignaciones_efectuadas">Consignaciones efectuadas</string>
    <string name="n_consig">Nº consig.</string>
    <string name="n_consignacion">Nº Consignación</string>
    <string name="banco">Banco</string>
    <string name="valor_consignado">Valor consignado</string>
    <string name="pagos_a_consignar">Pagos a consignar</string>
    <string name="valor_a_consignar">Valor a consignar</string>
    <string name="contacto">Contacto</string>
    <string name="cargo">Cargo</string>
    <string name="dato_de_contacto">Dato de contacto</string>
    <string name="crear_contacto">Crear contacto</string>
    <string name="modificar">Modificar</string>
    <string name="medio_de_comunicacion">Medio de comunicación</string>
    <string name="detalle">Detalle</string>
    <string name="estado">Estado</string>
    <string name="nuevo">Nuevo</string>
    <string name="actualizar">Actualizar</string>
    <string name="tipo_de_horario">Tipo de horario</string>
    <string name="dom">DOM</string>
    <string name="hora_inicial">Hora inicial</string>
    <string name="hora_final">Hora final</string>
    <string name="lugar">Lugar</string>
    <string name="dias">Días</string>
    <string name="crear_horario">Crear horario</string>
    <string name="datos_del_cliente">Datos del cliente</string>
    <string name="historicos">Históricos</string>
    <string name="observaciones">Observaciones</string>
    <string name="atras">Atrás</string>
    <string name="finalizar_actividad">Finalizar actividad</string>
    <string name="presupuesto_de_ventas">Presupuesto de ventas</string>
    <string name="asistente_general">Asistente general</string>
    <string name="facturacion_impuesto">Facturación - Impuesto</string>
    <string name="presupuesto_articulos">Presupuesto artículos</string>
    <string name="presupuesto_cartera">Presupuesto cartera</string>
    <string name="efectividad_de_visita">Efectividad de visita</string>
    <string name="acumulado_presupuesto_ventas">Acumulado presupuesto ventas</string>
    <string name="opciones">Opciones</string>
    <string name="agregar_extrarutas">Agregar extrarutas</string>
    <string name="esta_seguro_que_desea_finalizar_la_actividad">¿Desea finalizar la actividad del día?</string>
    <string name="antes_de_finalizar_la_actividad">Antes de finalizar la actividad por favor ingrese la siguiente información:</string>
    <string name="n_clientes_nuevos_hoy">Nº Clientes nuevos hoy:</string>
    <string name="ventas_clientes_nuevos_hoy">Ventas clientes nuevos hoy $:</string>
    <string name="accion_de_la_competencia">Acciones de la competencia</string>
    <string name="reabrir_actividad">Reabrir actividad</string>
    <string name="motivo_abono">Motivo abono</string>
    <string name="allow_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789¿?¡!:,.[]()$#-_/*+{}= \n</string>
    <string name="easysync_consultar_estado">Estado EasySync</string>
    <string name="recovery">Recovery</string>
</resources>