<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/eliminar" 
        android:title="@string/eliminar" 
        android:icon="@drawable/eliminar"
        android:showAsAction="ifRoom">
    </item>
    <item android:id="@+id/menu" 
        android:title="@string/menu" 
        android:icon="@drawable/menu"
        android:showAsAction="ifRoom">
    </item>
    <item android:id="@+id/guardar" 
        android:title="@string/guardar" 
        android:icon="@drawable/guardar"
       	android:showAsAction="ifRoom">
   	</item>
	<item android:id="@+id/salir_app" 
        android:title="@string/salir" 
        android:icon="@drawable/salir"
       	android:showAsAction="ifRoom">
   	</item>
</menu>    
