<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/salir_app"
        android:icon="@drawable/salir"
        android:showAsAction="ifRoom"
        android:title="@string/salir">
    </item>

    <item android:id="@+id/opciones"
		android:title="@string/opciones"
    	android:icon="@drawable/menu"
		android:showAsAction="ifRoom" >	
    
	    <menu>
	        <item
	            android:id="@+id/menu_item_recovery"
	            android:icon="@drawable/recovery"
	            android:showAsAction="never"
	            android:title="@string/recovery"/>
	        <item
	            android:id="@+id/menu_item_easysync"
	            android:icon="@drawable/easysync_estado"
	            android:showAsAction="never"
	            android:title="@string/easysync_consultar_estado"/>
	    </menu>
    </item>
    
</menu>