<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/view_border"
    tools:context=".Cliente_Consultas" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/view_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/view_head"
        android:gravity="center"
        android:text="@string/clientes"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/view_head"
		android:padding="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/pedidos"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="left"
            android:text="@string/pedidos"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cobros"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="left"
            android:text="@string/cobros"
            android:textStyle="bold" />

        <Button
            android:id="@+id/datos_del_cliente"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="left"
            android:text="@string/datos_del_cliente"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cartera"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="left"
            android:text="@string/cartera"
            android:textStyle="bold" />
<!--  
        <Button
            android:id="@+id/devoluciones"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="left"
            android:text="@string/devoluciones"
            android:textStyle="bold" />
-->
        <Button
            android:id="@+id/historicos"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="left"
            android:text="@string/historicos"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>

</ScrollView>